refactor: alteração do layout

--- a/5_modelagem-classificacao_1.ipynb
+++ b/5_modelagem-classificacao_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLq/lORPYlVSZvY/ZoSTbx",
+      "authorship_tag": "ABX9TyPIVL8shyRQzHwApZ6Ao/xU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,37 +94,10 @@
         "np.random.seed(SEED)"
       ],
       "metadata": {
-        "id": "0XUeMvn3g0MM",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "271ffa53-00a5-41a9-ee82-ad4a317ee067"
+        "id": "0XUeMvn3g0MM"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: ipython-autotime in /usr/local/lib/python3.10/dist-packages (0.3.1)\n",
-            "Requirement already satisfied: ipython in /usr/local/lib/python3.10/dist-packages (from ipython-autotime) (7.34.0)\n",
-            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.10/dist-packages (from ipython->ipython-autotime) (67.7.2)\n",
-            "Requirement already satisfied: jedi>=0.16 in /usr/local/lib/python3.10/dist-packages (from ipython->ipython-autotime) (0.19.0)\n",
-            "Requirement already satisfied: decorator in /usr/local/lib/python3.10/dist-packages (from ipython->ipython-autotime) (4.4.2)\n",
-            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.10/dist-packages (from ipython->ipython-autotime) (0.7.5)\n",
-            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.10/dist-packages (from ipython->ipython-autotime) (5.7.1)\n",
-            "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from ipython->ipython-autotime) (3.0.39)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.10/dist-packages (from ipython->ipython-autotime) (2.16.1)\n",
-            "Requirement already satisfied: backcall in /usr/local/lib/python3.10/dist-packages (from ipython->ipython-autotime) (0.2.0)\n",
-            "Requirement already satisfied: matplotlib-inline in /usr/local/lib/python3.10/dist-packages (from ipython->ipython-autotime) (0.1.6)\n",
-            "Requirement already satisfied: pexpect>4.3 in /usr/local/lib/python3.10/dist-packages (from ipython->ipython-autotime) (4.8.0)\n",
-            "Requirement already satisfied: parso<0.9.0,>=0.8.3 in /usr/local/lib/python3.10/dist-packages (from jedi>=0.16->ipython->ipython-autotime) (0.8.3)\n",
-            "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.10/dist-packages (from pexpect>4.3->ipython->ipython-autotime) (0.7.0)\n",
-            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.10/dist-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython->ipython-autotime) (0.2.6)\n",
-            "time: 500 µs (started: 2023-09-05 14:47:43 +00:00)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1148,7 +1121,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### <font style='font-size: 30px;'>Dummy Classifier Stratified</font>\n",
+        "## <font style='font-size: 30px;'>Modelos Simples</font>\n",
+        "<hr style='border: 2px solid red;'>"
+      ],
+      "metadata": {
+        "id": "NrK-xUQbhbQ2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Dummy Classifier Stratified\n",
         "<hr style='border: 2px solid red;'>"
       ],
       "metadata": {
@@ -1215,7 +1198,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### <font style='font-size: 30px;'>Dummy Classifier Most Frequence</font>\n",
+        "### Dummy Classifier Most Frequence\n",
         "<hr style='border: 2px solid red;'>"
       ],
       "metadata": {
@@ -1265,7 +1248,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### <font style='font-size: 30px;'>Modelo SVC</font>\n",
+        "### Modelo SGD\n",
+        "<hr style='border: 2px solid red;'>"
+      ],
+      "metadata": {
+        "id": "LjCatLHomj2w"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Modelo SVC\n",
         "<hr style='border: 2px solid red;'>"
       ],
       "metadata": {
@@ -1330,7 +1323,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### <font style='font-size: 30px;'>KNN</font>\n",
+        "### KNN</font>\n",
         "<hr style='border: 2px solid red;'>"
       ],
       "metadata": {
@@ -1511,7 +1504,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### <font style='font-size: 30px;'>Árvore de decisão</font>\n",
+        "### Árvore de decisão\n",
         "<hr style='border: 2px solid red;'>"
       ],
       "metadata": {
@@ -1585,7 +1578,83 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### <font style='font-size: 30px;'>Árvore de Decisão Cross Validate</font>\n",
+        "### <font style='font-size: 30px;'>Random Forest</font>\n",
+        "<hr style='border: 2px solid red;'>"
+      ],
+      "metadata": {
+        "id": "XJUFSGynDjxF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier"
+      ],
+      "metadata": {
+        "id": "plwEWsr5Dnts",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7a727a8f-45f6-4cc8-a58b-ef2d611edc15"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "time: 525 µs (started: 2023-09-05 15:31:04 +00:00)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "modelo_rfc = RandomForestClassifier(n_estimators = 100)\n",
+        "modelo_rfc.fit(X_treino, y_treino)\n",
+        "predito_rfc = modelo_rfc.predict(X_teste)\n",
+        "\n",
+        "imprimir_metricas('Random Forest', predito_rfc)\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "h9CkJBzHDnwh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6fdae48e-8242-403b-fc5a-9e25dd015986"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A Acurácia do modelo Random Forest foi 99.74%\n",
+            "A Precisão do modelo Random Forest foi 99.82%\n",
+            "A Recall do modelo Random Forest foi 99.66%\n",
+            "A F1 do modelo Random Forest foi 99.74%\n",
+            "\n",
+            "\n",
+            "time: 42.1 s (started: 2023-09-05 15:31:04 +00:00)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Modelos Cross Validate"
+      ],
+      "metadata": {
+        "id": "xNa0H9Qwh9pJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Árvore de Decisão Cross Validate\n",
         "<hr style='border: 2px solid red;'>"
       ],
       "metadata": {
@@ -1756,78 +1825,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### <font style='font-size: 30px;'>Random Forest</font>\n",
-        "<hr style='border: 2px solid red;'>"
-      ],
-      "metadata": {
-        "id": "XJUFSGynDjxF"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "<font color=\"red\">*Definir estimadores*</font>"
       ],
       "metadata": {
         "id": "Did7j6vzjCw9"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.ensemble import RandomForestClassifier"
-      ],
-      "metadata": {
-        "id": "plwEWsr5Dnts",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7a727a8f-45f6-4cc8-a58b-ef2d611edc15"
-      },
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "time: 525 µs (started: 2023-09-05 15:31:04 +00:00)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "modelo_rfc = RandomForestClassifier(n_estimators = 100)\n",
-        "modelo_rfc.fit(X_treino, y_treino)\n",
-        "predito_rfc = modelo_rfc.predict(X_teste)\n",
-        "\n",
-        "imprimir_metricas('Random Forest', predito_rfc)\n",
-        "print()"
-      ],
-      "metadata": {
-        "id": "h9CkJBzHDnwh",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6fdae48e-8242-403b-fc5a-9e25dd015986"
-      },
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "A Acurácia do modelo Random Forest foi 99.74%\n",
-            "A Precisão do modelo Random Forest foi 99.82%\n",
-            "A Recall do modelo Random Forest foi 99.66%\n",
-            "A F1 do modelo Random Forest foi 99.74%\n",
-            "\n",
-            "\n",
-            "time: 42.1 s (started: 2023-09-05 15:31:04 +00:00)\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
