feat: Gradiente descendente

--- a/5_modelagem-classificacao_1.ipynb
+++ b/5_modelagem-classificacao_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIVL8shyRQzHwApZ6Ao/xU",
+      "authorship_tag": "ABX9TyMNQ4SjCmZGdCO1Lu6vNwIf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,6 +58,29 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.pipeline import make_pipeline"
+      ],
+      "metadata": {
+        "id": "GtwDssePo6sb",
+        "outputId": "ecc395b5-dff6-40c4-e90f-04a723f7b4e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "time: 768 µs (started: 2023-09-05 18:38:38 +00:00)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1254,6 +1277,62 @@
       "metadata": {
         "id": "LjCatLHomj2w"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import SGDClassifier"
+      ],
+      "metadata": {
+        "id": "B6smUl1moy8h",
+        "outputId": "54c78a0a-8880-4f73-8eb1-2b988084fb23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "time: 734 µs (started: 2023-09-05 18:40:12 +00:00)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip_sgd = make_pipeline(StandardScaler(),\n",
+        "                        SGDClassifier(max_iter=1000, tol=1e-3, random_state=SEED))\n",
+        "pip_sgd.fit(X=X_treino, y=y_treino)\n",
+        "predito_sgd = pip_sgd.predict(X_teste)\n",
+        "\n",
+        "imprimir_metricas('SGD', predito_sgd)"
+      ],
+      "metadata": {
+        "id": "N5qOuefxpIj1",
+        "outputId": "7600cc1b-93e4-4409-d37b-682fc4ae9aa4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A Acurácia do modelo SGD foi 97.23%\n",
+            "A Precisão do modelo SGD foi 98.38%\n",
+            "A Recall do modelo SGD foi 96.04%\n",
+            "A F1 do modelo SGD foi 97.20%\n",
+            "\n",
+            "time: 1.5 s (started: 2023-09-05 18:47:40 +00:00)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
