refactor: pipepine me Arvore e ramdom forest

--- a/5_modelagem-classificacao_1.ipynb
+++ b/5_modelagem-classificacao_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCs+VtD8gyUqz276A2T37e",
+      "authorship_tag": "ABX9TyOquVDEDkElBM8m4fzwi5j/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1504,7 +1504,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c5f51f60-a975-47db-fde0-461e45360ede"
+        "outputId": "1c95f84f-001a-4476-fad2-31601f3358bc"
       },
       "execution_count": 32,
       "outputs": [
@@ -1512,7 +1512,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "time: 877 µs (started: 2023-09-05 15:23:36 +00:00)\n"
+            "time: 534 µs (started: 2023-09-05 19:47:25 +00:00)\n"
           ]
         }
       ]
@@ -1520,7 +1520,7 @@
     {
       "cell_type": "code",
       "source": [
-        "modelo_dtc = DecisionTreeClassifier()\n",
+        "modelo_dtc = make_pipeline(DecisionTreeClassifier())\n",
         "modelo_dtc.fit(X_treino, y_treino)\n",
         "predito_dtc = modelo_dtc.predict(X_teste)\n",
         "\n",
@@ -1531,7 +1531,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3eb04dec-9477-4803-b0c6-efd2b4eb56b5"
+        "outputId": "330a5a7f-831d-43a7-9f8d-21dfe3d9422f"
       },
       "execution_count": 33,
       "outputs": [
@@ -1544,7 +1544,7 @@
             "A Recall do modelo Decision Tree foi 99.57%\n",
             "A F1 do modelo Decision Tree foi 99.49%\n",
             "\n",
-            "time: 2.61 s (started: 2023-09-05 15:23:36 +00:00)\n"
+            "time: 4.41 s (started: 2023-09-05 19:47:27 +00:00)\n"
           ]
         }
       ]
@@ -1569,15 +1569,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7a727a8f-45f6-4cc8-a58b-ef2d611edc15"
+        "outputId": "74e092f6-e0e5-4ac5-ea3e-86634ed1ddbf"
       },
-      "execution_count": 39,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "time: 525 µs (started: 2023-09-05 15:31:04 +00:00)\n"
+            "time: 539 µs (started: 2023-09-05 19:47:31 +00:00)\n"
           ]
         }
       ]
@@ -1585,7 +1585,7 @@
     {
       "cell_type": "code",
       "source": [
-        "modelo_rfc = RandomForestClassifier(n_estimators = 100)\n",
+        "modelo_rfc = make_pipeline(RandomForestClassifier(n_estimators = 100))\n",
         "modelo_rfc.fit(X_treino, y_treino)\n",
         "predito_rfc = modelo_rfc.predict(X_teste)\n",
         "\n",
@@ -1597,21 +1597,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6fdae48e-8242-403b-fc5a-9e25dd015986"
+        "outputId": "69d0c588-d399-4179-b145-818e67d7dee4"
       },
-      "execution_count": 40,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A Acurácia do modelo Random Forest foi 99.74%\n",
-            "A Precisão do modelo Random Forest foi 99.82%\n",
-            "A Recall do modelo Random Forest foi 99.66%\n",
-            "A F1 do modelo Random Forest foi 99.74%\n",
+            "A Acurácia do modelo Random Forest foi 99.73%\n",
+            "A Precisão do modelo Random Forest foi 99.81%\n",
+            "A Recall do modelo Random Forest foi 99.65%\n",
+            "A F1 do modelo Random Forest foi 99.73%\n",
             "\n",
             "\n",
-            "time: 42.1 s (started: 2023-09-05 15:31:04 +00:00)\n"
+            "time: 42.4 s (started: 2023-09-05 19:47:31 +00:00)\n"
           ]
         }
       ]
