--- a/6_melhores_features_rf.ipynb
+++ b/6_melhores_features_rf.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQzKJUizekrUzoCduKaRoG",
+      "authorship_tag": "ABX9TyM2iVGniN0PBsdnY4OU0WXl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,10 +40,10 @@
       "execution_count": 30,
       "metadata": {
         "id": "6fUC7hS0NCQP",
-        "outputId": "73cf4bc9-e5b4-4f0c-8b14-228309f9312e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "73cf4bc9-e5b4-4f0c-8b14-228309f9312e"
       },
       "outputs": [
         {
@@ -91,10 +91,10 @@
       ],
       "metadata": {
         "id": "m7-6x6cNNdvr",
-        "outputId": "78601133-2dd9-4b96-cb04-107a458fe643",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "78601133-2dd9-4b96-cb04-107a458fe643"
       },
       "execution_count": 31,
       "outputs": [
@@ -179,10 +179,10 @@
       ],
       "metadata": {
         "id": "irm_C5DTNk8c",
-        "outputId": "26b4eb03-e320-47cc-833c-55c275316b60",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "26b4eb03-e320-47cc-833c-55c275316b60"
       },
       "execution_count": 4,
       "outputs": [
@@ -714,10 +714,10 @@
       ],
       "metadata": {
         "id": "5VLmOajbO5xh",
-        "outputId": "6d1403d2-09ed-4372-805b-a736c390de1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6d1403d2-09ed-4372-805b-a736c390de1f"
       },
       "execution_count": 7,
       "outputs": [
@@ -749,10 +749,10 @@
       ],
       "metadata": {
         "id": "MO41QWXtbVyP",
-        "outputId": "0569e834-ecf6-4917-f9a6-f20fb5afe4dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0569e834-ecf6-4917-f9a6-f20fb5afe4dd"
       },
       "execution_count": 8,
       "outputs": [
@@ -824,10 +824,10 @@
       ],
       "metadata": {
         "id": "5vgSCfm_ZS4J",
-        "outputId": "413a6827-9325-4f6c-e85f-8b4077eb5fbc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "413a6827-9325-4f6c-e85f-8b4077eb5fbc"
       },
       "execution_count": 11,
       "outputs": [
@@ -861,10 +861,10 @@
       ],
       "metadata": {
         "id": "SZ6Pgb0_N4FL",
-        "outputId": "989cb384-3a8f-4d3f-843f-a6e8f4bed182",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "989cb384-3a8f-4d3f-843f-a6e8f4bed182"
       },
       "execution_count": 36,
       "outputs": [
@@ -909,10 +909,10 @@
       ],
       "metadata": {
         "id": "va6EAYNOmByu",
-        "outputId": "4090500e-687b-461f-81bc-35c493b7e9e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4090500e-687b-461f-81bc-35c493b7e9e2"
       },
       "execution_count": 41,
       "outputs": [
@@ -932,12 +932,12 @@
         "df_kbest_arvore"
       ],
       "metadata": {
-        "id": "w4jTTgV7fXwR",
-        "outputId": "61a45a48-cf4a-4c27-885c-2c46d845b398",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 695
-        }
+        },
+        "id": "w4jTTgV7fXwR",
+        "outputId": "61a45a48-cf4a-4c27-885c-2c46d845b398"
       },
       "execution_count": 46,
       "outputs": [
@@ -1939,10 +1939,10 @@
       ],
       "metadata": {
         "id": "UN1QSo4W8-Lf",
-        "outputId": "2267ae49-5439-41cb-ae62-a36c831fbfba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2267ae49-5439-41cb-ae62-a36c831fbfba"
       },
       "execution_count": 48,
       "outputs": [
@@ -1962,7 +1962,7 @@
         "  count = 1\n",
         "  df_rfe = pd.DataFrame(columns=['K', 'Acurácia', 'Precisão', 'Recall', 'F1', 'Features'])\n",
         "  # X_raw.shape[1]\n",
-        "  for count in range(1, 5):\n",
+        "  for count in range(1, 5+1):\n",
         "    selecionador_rfe = RFE(estimator = _modelo, n_features_to_select = count, step = 1)\n",
         "    selecionador_rfe.fit(X_treino, y_treino)\n",
         "\n",
@@ -1988,18 +1988,18 @@
       ],
       "metadata": {
         "id": "ZYd8-PF-96wa",
-        "outputId": "dcb3ff35-91f3-4dfd-e852-c0716f0f7ddb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0c657e5f-294a-48ee-983a-965696da725f"
       },
-      "execution_count": 60,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "time: 1.45 ms (started: 2023-09-18 01:52:56 +00:00)\n"
+            "time: 1.66 ms (started: 2023-09-18 02:58:45 +00:00)\n"
           ]
         }
       ]
@@ -2389,28 +2389,36 @@
         "df_rfe_random_forest"
       ],
       "metadata": {
-        "id": "sY0KNBcd_LOl",
-        "outputId": "b5ea92d2-a050-4e2e-a613-699af89ab339",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 193
-        }
+          "height": 224
+        },
+        "id": "sY0KNBcd_LOl",
+        "outputId": "73ebee1d-6356-4b1a-9478-6cf9940829bf"
       },
-      "execution_count": 61,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   K  Acurácia  Precisão  Recall     F1                          Features\n",
-              "1  1     95.60     97.96   93.14  95.49                            APGAR5\n",
-              "2  2     98.17     99.43   96.89  98.14                    APGAR1, APGAR5\n",
-              "3  3     99.45     99.56   99.33  99.45              APGAR1, APGAR5, PESO\n",
-              "4  4     99.64     99.67   99.60  99.63  APGAR1, APGAR5, PESO, SEMAGESTAC"
+              "   K  Acurácia  Precisão  Recall     F1  \\\n",
+              "1  1     95.60     97.96   93.14  95.49   \n",
+              "2  2     98.17     99.43   96.89  98.14   \n",
+              "3  3     99.45     99.56   99.33  99.44   \n",
+              "4  4     99.64     99.67   99.61  99.64   \n",
+              "5  5     99.69     99.74   99.64  99.69   \n",
+              "\n",
+              "                                          Features  \n",
+              "1                                           APGAR5  \n",
+              "2                                   APGAR1, APGAR5  \n",
+              "3                             APGAR1, APGAR5, PESO  \n",
+              "4                 APGAR1, APGAR5, PESO, SEMAGESTAC  \n",
+              "5  APGAR1, APGAR5, CODANOMAL_QTD, PESO, SEMAGESTAC  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ed565cd3-683d-4fec-96cc-01395509f4f4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5c83285e-cc53-4544-8e6b-25cb09d9742c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2462,7 +2470,7 @@
               "      <td>99.45</td>\n",
               "      <td>99.56</td>\n",
               "      <td>99.33</td>\n",
-              "      <td>99.45</td>\n",
+              "      <td>99.44</td>\n",
               "      <td>APGAR1, APGAR5, PESO</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -2470,9 +2478,18 @@
               "      <td>4</td>\n",
               "      <td>99.64</td>\n",
               "      <td>99.67</td>\n",
-              "      <td>99.60</td>\n",
-              "      <td>99.63</td>\n",
+              "      <td>99.61</td>\n",
+              "      <td>99.64</td>\n",
               "      <td>APGAR1, APGAR5, PESO, SEMAGESTAC</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>5</td>\n",
+              "      <td>99.69</td>\n",
+              "      <td>99.74</td>\n",
+              "      <td>99.64</td>\n",
+              "      <td>99.69</td>\n",
+              "      <td>APGAR1, APGAR5, CODANOMAL_QTD, PESO, SEMAGESTAC</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -2480,7 +2497,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ed565cd3-683d-4fec-96cc-01395509f4f4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5c83285e-cc53-4544-8e6b-25cb09d9742c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2532,12 +2549,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ed565cd3-683d-4fec-96cc-01395509f4f4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-5c83285e-cc53-4544-8e6b-25cb09d9742c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ed565cd3-683d-4fec-96cc-01395509f4f4');\n",
+              "        const element = document.querySelector('#df-5c83285e-cc53-4544-8e6b-25cb09d9742c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2557,8 +2574,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-263a5999-f5fa-49a0-9679-d0969e3aebf6\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-263a5999-f5fa-49a0-9679-d0969e3aebf6')\"\n",
+              "<div id=\"df-56a5465c-3b6b-435a-89e4-ef694abfcb03\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-56a5465c-3b6b-435a-89e4-ef694abfcb03')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2677,7 +2694,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-263a5999-f5fa-49a0-9679-d0969e3aebf6 button');\n",
+              "        document.querySelector('#df-56a5465c-3b6b-435a-89e4-ef694abfcb03 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2688,13 +2705,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 63
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "time: 1h 1min 10s (started: 2023-09-18 01:52:59 +00:00)\n"
+            "time: 1h 13min 8s (started: 2023-09-18 02:58:59 +00:00)\n"
           ]
         }
       ]
