feat: hp random forest

--- a/5_modelagem-classificacao_3.ipynb
+++ b/5_modelagem-classificacao_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTxBXZGaTTalVUyr/r/QKV",
+      "authorship_tag": "ABX9TyOHvuKo/7rofFQUqG6qQTCi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1099,11 +1099,11 @@
         "from sklearn.model_selection import cross_validate"
       ],
       "metadata": {
-        "id": "EwIXDxoPjEk8",
-        "outputId": "511d9441-8c94-4ac8-f321-271d99275607",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EwIXDxoPjEk8",
+        "outputId": "511d9441-8c94-4ac8-f321-271d99275607"
       },
       "execution_count": 21,
       "outputs": [
@@ -1229,11 +1229,11 @@
         "from scipy.stats import randint"
       ],
       "metadata": {
-        "id": "q4P-sBsmn9WM",
-        "outputId": "f92d89b1-62b1-4b64-f1c0-21b237a3e843",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "q4P-sBsmn9WM",
+        "outputId": "f92d89b1-62b1-4b64-f1c0-21b237a3e843"
       },
       "execution_count": 25,
       "outputs": [
@@ -1257,11 +1257,11 @@
         "}"
       ],
       "metadata": {
-        "id": "g_TMc0nmjjdr",
-        "outputId": "fd93ce3e-d649-4fd7-8114-dc4dbe3d74ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g_TMc0nmjjdr",
+        "outputId": "fd93ce3e-d649-4fd7-8114-dc4dbe3d74ee"
       },
       "execution_count": 26,
       "outputs": [
@@ -1287,19 +1287,19 @@
         "resultados = pd.DataFrame(busca.cv_results_)"
       ],
       "metadata": {
-        "id": "YUIb2zc8jxFF",
-        "outputId": "3751abf1-a199-49c9-b747-ca28d0b57f46",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YUIb2zc8jxFF",
+        "outputId": "de5a46af-89d2-4e56-cd2d-c70af01ad062"
       },
-      "execution_count": 28,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "time: 3min 24s (started: 2023-09-19 04:16:00 +00:00)\n"
+            "time: 3min 35s (started: 2023-09-19 04:37:13 +00:00)\n"
           ]
         }
       ]
@@ -1312,11 +1312,11 @@
         "print(busca.best_estimator_)"
       ],
       "metadata": {
-        "id": "RqCKxS8ulOZp",
-        "outputId": "d51877e9-b9d1-48ea-dd56-e1cae9eb777a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RqCKxS8ulOZp",
+        "outputId": "d51877e9-b9d1-48ea-dd56-e1cae9eb777a"
       },
       "execution_count": 29,
       "outputs": [
@@ -1333,6 +1333,36 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "resultados_ordenados_pela_media = resultados.sort_values(\"mean_test_score\", ascending=False)\n",
+        "for indice, linha in resultados_ordenados_pela_media[:5].iterrows():\n",
+        "  print(\"%.3f +-(%.3f) %s\" % (linha.mean_test_score, linha.std_test_score*2, linha.params))"
+      ],
+      "metadata": {
+        "id": "E5KLV2esuhN6",
+        "outputId": "d4c222fd-1e3c-4a17-d4e7-161a31d4ee1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.991 +-(0.001) {'criterion': 'entropy', 'max_depth': 16, 'min_samples_leaf': 51, 'min_samples_split': 65}\n",
+            "0.991 +-(0.001) {'criterion': 'entropy', 'max_depth': 16, 'min_samples_leaf': 52, 'min_samples_split': 85}\n",
+            "0.991 +-(0.001) {'criterion': 'entropy', 'max_depth': 16, 'min_samples_leaf': 53, 'min_samples_split': 67}\n",
+            "0.990 +-(0.001) {'criterion': 'entropy', 'max_depth': 16, 'min_samples_leaf': 57, 'min_samples_split': 99}\n",
+            "0.990 +-(0.001) {'criterion': 'gini', 'max_depth': 16, 'min_samples_leaf': 32, 'min_samples_split': 107}\n",
+            "time: 3.67 ms (started: 2023-09-19 04:40:48 +00:00)\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Random Forest Max deph"
@@ -1340,6 +1370,29 @@
       "metadata": {
         "id": "_RxhihFbwyCu"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier"
+      ],
+      "metadata": {
+        "id": "UbLmJdPnwMnH",
+        "outputId": "1806e658-0c73-497f-8f3d-da5bc334bfb6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "time: 635 µs (started: 2023-09-19 04:44:15 +00:00)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1435,6 +1488,102 @@
           "name": "stdout",
           "text": [
             "time: 352 ms (started: 2023-09-06 16:56:22 +00:00)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Busca de parâmetros"
+      ],
+      "metadata": {
+        "id": "ALs5fgNqwRdl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "busca = RandomizedSearchCV(RandomForestClassifier(),\n",
+        "                           espaco_de_parametros,\n",
+        "                           n_iter = 8,\n",
+        "                           cv = StratifiedKFold(n_splits = 5, shuffle=True),\n",
+        "                           random_state = SEED)\n",
+        "\n",
+        "busca.fit(X_treino, y_treino)\n",
+        "resultados = pd.DataFrame(busca.cv_results_)"
+      ],
+      "metadata": {
+        "id": "La3iX2GnwT4t",
+        "outputId": "9b220977-d523-4321-e5b9-8399058a2144",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "time: 15min 32s (started: 2023-09-19 04:59:30 +00:00)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = cross_val_score(busca, X_treino, y_treino, cv = StratifiedKFold(n_splits=5, shuffle=True), scoring='recall')\n",
+        "print(scores)\n",
+        "print(busca.best_estimator_)"
+      ],
+      "metadata": {
+        "id": "_WrFe_k4xBus",
+        "outputId": "37eea5df-b498-46f8-b566-23cc78a1cca3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.99496346 0.9963646  0.99556936 0.99598576 0.9957587 ]\n",
+            "RandomForestClassifier(max_depth=16, min_samples_leaf=32, min_samples_split=107)\n",
+            "time: 57min 56s (started: 2023-09-19 05:15:03 +00:00)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resultados_ordenados_pela_media = resultados.sort_values(\"mean_test_score\", ascending=False)\n",
+        "for indice, linha in resultados_ordenados_pela_media[:5].iterrows():\n",
+        "  print(\"%.3f +-(%.3f) %s\" % (linha.mean_test_score, linha.std_test_score*2, linha.params))"
+      ],
+      "metadata": {
+        "id": "z2ChtwLFxIsG",
+        "outputId": "56d5a3b8-7836-428d-91d8-a177ba07b6ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.991 +-(0.001) {'criterion': 'gini', 'max_depth': 16, 'min_samples_leaf': 32, 'min_samples_split': 107}\n",
+            "0.990 +-(0.001) {'criterion': 'entropy', 'max_depth': 16, 'min_samples_leaf': 57, 'min_samples_split': 99}\n",
+            "0.989 +-(0.001) {'criterion': 'entropy', 'max_depth': 10, 'min_samples_leaf': 38, 'min_samples_split': 51}\n",
+            "0.988 +-(0.002) {'criterion': 'entropy', 'max_depth': 16, 'min_samples_leaf': 89, 'min_samples_split': 46}\n",
+            "0.986 +-(0.001) {'criterion': 'gini', 'max_depth': 16, 'min_samples_leaf': 95, 'min_samples_split': 101}\n",
+            "time: 9.83 ms (started: 2023-09-19 06:12:59 +00:00)\n"
           ]
         }
       ]
